mypy: Adds type hints for onegov.event

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ exclude_lines = [
     "assert_never[(]",
     "@overload",
     "raise NotImplementedError",
+    "raise AssertionError[(].unreachable.[)]",
     "if TYPE_CHECKING:",
     "if __name__ == .__main__."
 ]
@@ -44,6 +45,7 @@ module = [
     "onegov.core.*",
     "onegov.directory.*",
     "onegov.election_day.*",
+    "onegov.event.*",
     "onegov.file.*",
     "onegov.form.*",
     "onegov.foundation.*",
