mypy: Adds type hints for onegov.people

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,7 @@ module = [
     "onegov.page.*",
     "onegov.pay.*",
     "onegov.pdf.*",
+    "onegov.people.*",
     "onegov.qrcode.*",
     "onegov.quill.*",
     "onegov.recipient.*",
