Pin mypy to < 1.8.0

--- a/setup.cfg
+++ b/setup.cfg
@@ -193,7 +193,7 @@ dev =
     scrambler
 mypy =
     dogpile.cache>=1.2.1
-    mypy
+    mypy<1.8.0
     sqlalchemy-stubs
     types-babel
     types-beautifulsoup4
