Removes version pin on mypy
Fixes logging config issue
Fixes some more regressions
Fixes regression caused by new WTForms version

--- a/setup.cfg
+++ b/setup.cfg
@@ -193,7 +193,7 @@ dev =
     scrambler
 mypy =
     dogpile.cache>=1.2.1
-    mypy<1.8.0
+    mypy
     sqlalchemy-stubs
     types-babel
     types-beautifulsoup4
