--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,7 @@ module = [
     "onegov.newsletter.*",
     "onegov.notice.*",
     "onegov.onboarding.*",
+    "onegov.org.layout.*",
     "onegov.org.models.*",
     "onegov.page.*",
     "onegov.pay.*",
