--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -82,7 +82,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install .[mypy] flake8 flake8-bugbear flake8-pyi bandit[toml]
+        pip install .[mypy] GitPython flake8 flake8-bugbear flake8-pyi bandit[toml]
 
     - name: Linting
       run: flake8 src/ tests/ stubs/
