--- a/setup.cfg
+++ b/setup.cfg
@@ -81,7 +81,7 @@ install_requires =
     email-validator
     faker
     fastcache
-    filedepot
+    filedepot<0.11.0
     fs
     genshi
     hiredis
