mypy: Adds type hints for `onegov.town6`
Refactors layouts in Town6, so there's less duplicated code, this also
avoids inheritance issues when reusing the Org views in Town6.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,6 +72,7 @@ module = [
     "onegov.shared.*",
     "onegov.stepsequence.*",
     "onegov.ticket.*",
+    "onegov.town6.*",
     "onegov.user.*",
     "onegov.websockets.*",
     "onegov.wtfs.*"
