Pas: Add base models.
TYPE: Feature
LINK: OGC-1502

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,7 @@ packages =
     onegov.onboarding
     onegov.org
     onegov.page
+    onegov.pas
     onegov.pay
     onegov.pdf
     onegov.people
@@ -313,6 +314,7 @@ onegov_upgrades =
     onegov.onboarding = onegov.onboarding.upgrade
     onegov.org = onegov.org.upgrade
     onegov.page = onegov.page.upgrade
+    onegov.pas = onegov.pas.upgrade
     onegov.pay = onegov.pay.upgrade
     onegov.pdf = onegov.pdf.upgrade
     onegov.people = onegov.people.upgrade
