mypy: Cleans up some dependencies and missing stubs

--- a/setup.cfg
+++ b/setup.cfg
@@ -82,7 +82,6 @@ install_requires =
     elasticsearch-dsl>=7.0.0,<8.0.0
     email-validator
     faker
-    fastcache
     feedgen
     filedepot
     fs
@@ -104,7 +103,6 @@ install_requires =
     lxml
     markupsafe
     mistletoe>=1.2.0
-    mistune
     more.content_security
     more.transaction
     more.webassets
@@ -168,7 +166,6 @@ install_requires =
     xlsxwriter
     xsdata!=23.5
     xsdata-ech
-    xtermcolor
     yubico-client
     zope.sqlalchemy
 
@@ -198,6 +195,7 @@ dev =
 mypy =
     dogpile.cache>=1.2.1
     mypy
+    sortedcontainers-stubs
     sqlalchemy-stubs
     types-babel
     types-beautifulsoup4
@@ -218,6 +216,7 @@ mypy =
     types-python-dateutil
     types-pyyaml
     types-pytz
+    types-qrcode
     types-redis
     types-requests
     types-setuptools
