--- a/setup.cfg
+++ b/setup.cfg
@@ -336,6 +336,6 @@ onegov_upgrades =
 ignore = E711,E712,W503,E402,E704,E741,B007
 extend-select = B904,TC2
 per_file_ignores =
-    *.pyi: B,C,MS,TC,E301,E302,E305,E501,E701,F401,F403,F405,F822
+    *.pyi: B,C,MS,TC,E301,E302,E305,E501,E701,F401,F403,F405,F822,Y065
     tests/**.py: C,MS,NQA104,TC
 noqa-require-code = true
