--- a/.github/workflows/measure-and-store-test-durations.yml
+++ b/.github/workflows/measure-and-store-test-durations.yml
@@ -82,8 +82,10 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install pytest-split .[test]
+        python -m pip install --upgrade uv
+        uv pip install pytest-split .[test]
+      env:
+        UV_SYSTEM_PYTHON: true
 
     - name: Measure test durations
       run: pytest --store-durations tests
