--- a/.github/workflows/stubtest.yml
+++ b/.github/workflows/stubtest.yml
@@ -74,8 +74,10 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install .[mypy]
+        python -m pip install --upgrade uv
+        uv pip install .[mypy]
+      env:
+        UV_SYSTEM_PYTHON: true
 
     - name: Stubtest
       run: bash stubtest.sh
