--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -194,10 +194,12 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install pytest-split pytest-cov pytest-codecov
+        python -m pip install --upgrade uv
+        uv pip install pytest-split pytest-cov pytest-codecov
         # TEMPORARY: editable build so we don't need a path-fix in codecov
-        pip install -e .[test]
+        uv pip install -e .[test]
+      env:
+        UV_SYSTEM_PYTHON: true
 
     - name: Run tests
       run: |
