--- a/.github/workflows/measure-and-store-test-durations.yml
+++ b/.github/workflows/measure-and-store-test-durations.yml
@@ -73,17 +73,19 @@ jobs:
         redis-server --daemonize yes
 
     - name: Checkout repo
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: '3.10'
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install pytest-split .[test]
+        python -m pip install --upgrade uv
+        uv pip install pytest-split .[test]
+      env:
+        UV_SYSTEM_PYTHON: true
 
     - name: Measure test durations
       run: pytest --store-durations tests
