--- a/.github/workflows/stubtest.yml
+++ b/.github/workflows/stubtest.yml
@@ -65,17 +65,19 @@ jobs:
           --fix-missing
 
     - name: Checkout repo
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: '3.10'
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install .[mypy]
+        python -m pip install --upgrade uv
+        uv pip install .[mypy]
+      env:
+        UV_SYSTEM_PYTHON: true
 
     - name: Stubtest
       run: bash stubtest.sh
