mypy: Adds types-qrbill to mypy dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -216,6 +216,7 @@ mypy =
     types-python-dateutil
     types-pyyaml
     types-pytz
+    types-qrbill
     types-qrcode
     types-redis
     types-requests
