--- a/.github/workflows/measure-and-store-test-durations.yml
+++ b/.github/workflows/measure-and-store-test-durations.yml
@@ -11,8 +11,8 @@ jobs:
     steps:
     - name: Install packages
       run: |
-        sudo apt update
-        sudo apt install \
+        sudo apt-get update
+        sudo apt-get install \
           build-essential \
           git \
           gcc \
