--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,10 +44,7 @@ mypy_path = "$MYPY_CONFIG_FILE_DIR/src:$MYPY_CONFIG_FILE_DIR/stubs"
 
 [[tool.mypy.overrides]]
 # more lax rules for untyped modules
-module = [
-    "onegov.feriennet.*",
-    "onegov.winterthur.*"
-]
+module = ["onegov.feriennet.*"]
 warn_unreachable = false
 disallow_any_generics = false
 disallow_incomplete_defs = false
