--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,6 +19,7 @@ repos:
       - id: flake8
         files: '^(src|stubs|tests).*\.py'
         additional_dependencies:
+        - flake8-broken-line
         - flake8-bugbear>=23.11.28
         - flake8-comprehensions
         - 'flake8-markupsafe@git+https://github.com/vmagamedov/flake8-markupsafe#egg=b391bd13df9330e01666d304b7f4403d67e5ceba'
