--- a/setup.cfg
+++ b/setup.cfg
@@ -173,7 +173,7 @@ install_requires =
 dev =
     bandit[toml]
     flake8
-    # TODO: consider adding flake8-broken-line
+    flake8-broken-line
     flake8-bugbear
     flake8-comprehensions
     # TODO: consider hosting our own plugin on pypi
@@ -337,5 +337,5 @@ ignore = E711,E712,W503,E402,E704,E741,B007
 extend-select = B904,TC2
 per_file_ignores =
     *.pyi: B,C,MS,TC,E301,E302,E305,E501,E701,F401,F403,F405,F822,Y065
-    tests/**.py: C,MS,NQA104,TC
+    tests/**.py: C,MS,N400,NQA104,TC
 noqa-require-code = true
