--- a/setup.cfg
+++ b/setup.cfg
@@ -202,6 +202,7 @@ mypy =
     types-bleach
     types-editdistance
     types-html5lib
+    types-icalendar
     types-ldap3
     types-libsass
     types-lxml
