--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -99,7 +99,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        group: [1, 2, 3, 4, 5, 6, 7]
+        group: [1, 2, 3, 4, 5, 6, 7, 8]
 
     runs-on: ubuntu-latest
 
@@ -204,7 +204,7 @@ jobs:
     - name: Run tests
       run: |
         py.test \
-          --splits "7" \
+          --splits "8" \
           --group "${{matrix.group}}" \
           --cov \
           --cov-config=pyproject.toml \
