mypy: Adds `types-reportlab` and fixes uncovered issues

--- a/setup.cfg
+++ b/setup.cfg
@@ -221,6 +221,7 @@ mypy =
     types-qrbill
     types-qrcode
     types-redis
+    types-reportlab
     types-requests
     types-setuptools
     types-stripe
