Pins pytest-redis

--- a/setup.cfg
+++ b/setup.cfg
@@ -252,7 +252,7 @@ test =
     pytest
     pytest-asyncio
     pytest-localserver
-    pytest-redis
+    pytest-redis<3.1.0
     pytest-rerunfailures
     pytest-timeout
     pyyaml
