--- a/setup.cfg
+++ b/setup.cfg
@@ -252,6 +252,7 @@ test =
     pytest
     pytest-asyncio
     pytest-localserver
+    # FIXME: Update test fixtures to make them work again
     pytest-redis<3.1.0
     pytest-rerunfailures
     pytest-timeout
