Fixes compatibility issues with latest version of pytest-redis

--- a/setup.cfg
+++ b/setup.cfg
@@ -253,7 +253,7 @@ test =
     pytest-asyncio
     pytest-localserver
     # FIXME: Update test fixtures to make them work again
-    pytest-redis<3.1.0
+    pytest-redis
     pytest-rerunfailures
     pytest-timeout
     pyyaml
