--- a/.buildkite/generic-pipeline.yml
+++ b/.buildkite/generic-pipeline.yml
@@ -11,29 +11,13 @@ steps:
     env:
       CONTAINER: "onegov-cloud:head"
 
-  # run the javascript tests
-  - command: "test-container"
-    label: "Jesting"
-
-    agents:
-      - queue=generic
-
-    if: build.message =~ /jest/
-
-    env:
-      CONTAINER: "onegov-cloud:head"
-      CONTAINER_TEST_SCRIPT: ".buildkite/jest"
-
-  # build the docs if possible (fails are ignored, only on master)
+  # build the docs
   - command: "test-container"
     label: "Publishing docs"
 
     agents:
       - queue=generic
       - ram=4096
-
-    soft_fail:
-      - exit_status: 1
 
     env:
       CONTAINER: "onegov-cloud:head-${BUILDKITE_COMMIT:0:10}"
