--- a/.github/workflows/stubtest.yml
+++ b/.github/workflows/stubtest.yml
@@ -50,7 +50,7 @@ jobs:
           libc-dev \
           fonts-liberation \
           libappindicator3-1 \
-          libasound2 \
+          libasound2t64  \
           libdrm2 \
           libgbm1 \
           libnspr4 \
