--- a/.github/workflows/measure-and-store-test-durations.yml
+++ b/.github/workflows/measure-and-store-test-durations.yml
@@ -83,12 +83,12 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade uv
-        uv pip install pytest-split .[test]
+        uv pip install pytest-split pytest-xdist .[test]
       env:
         UV_SYSTEM_PYTHON: true
 
     - name: Measure test durations
-      run: pytest --store-durations tests
+      run: pytest -nauto --store-durations tests
 
     - uses: EndBug/add-and-commit@v9
       with:
