--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -206,7 +206,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade uv
-        uv pip install pytest-split pytest-cov pytest-codecov
+        uv pip install pytest-split pytest-cov pytest-codecov pytest-xdist
         # TEMPORARY: editable build so we don't need a path-fix in codecov
         uv pip install -e .[test]
       env:
@@ -215,6 +215,7 @@ jobs:
     - name: Run tests
       run: |
         py.test \
+          -nauto \
           --splits "8" \
           --group "${{matrix.group}}" \
           --cov \
