Uses correct dist setting so the grouping actually has an effect

--- a/.github/workflows/measure-and-store-test-durations.yml
+++ b/.github/workflows/measure-and-store-test-durations.yml
@@ -88,7 +88,7 @@ jobs:
         UV_SYSTEM_PYTHON: true
 
     - name: Measure test durations
-      run: pytest -nauto --store-durations tests
+      run: pytest -nauto --dist loadgroup --store-durations tests
 
     - uses: EndBug/add-and-commit@v9
       with:
