--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -110,7 +110,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        group: [1, 2, 3, 4, 5, 6, 7, 8]
+        group: [1, 2, 3, 4, 5, 6]
 
     runs-on: ubuntu-22.04
 
@@ -217,7 +217,7 @@ jobs:
         py.test \
           -n logical \
           --dist loadgroup \
-          --splits "8" \
+          --splits "6" \
           --group "${{matrix.group}}" \
           --cov \
           --cov-config=pyproject.toml \
