--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -110,7 +110,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        group: [1, 2, 3, 4, 5, 6, 7, 8]
+        group: [1, 2, 3, 4, 5, 6]
 
     runs-on: ubuntu-22.04
 
@@ -206,7 +206,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade uv
-        uv pip install pytest-split pytest-cov pytest-codecov
+        uv pip install pytest-split pytest-cov pytest-codecov pytest-xdist psutil
         # TEMPORARY: editable build so we don't need a path-fix in codecov
         uv pip install -e .[test]
       env:
@@ -215,7 +215,9 @@ jobs:
     - name: Run tests
       run: |
         py.test \
-          --splits "8" \
+          -n logical \
+          --dist loadgroup \
+          --splits "6" \
           --group "${{matrix.group}}" \
           --cov \
           --cov-config=pyproject.toml \
