--- a/.github/workflows/stubtest.yml
+++ b/.github/workflows/stubtest.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   stubtest:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
 
     steps:
     - name: Install packages
@@ -50,7 +50,7 @@ jobs:
           libc-dev \
           fonts-liberation \
           libappindicator3-1 \
-          libasound2 \
+          libasound2t64  \
           libdrm2 \
           libgbm1 \
           libnspr4 \
