--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -46,7 +46,7 @@ jobs:
 
       - name: Run tests on built image
         run: |
-          docker run test-container
+          docker run ${{ env.IMAGE_NAME }} test-container
 
       # - name: Generate artifact attestation
       #   uses: actions/attest-build-provenance@v1
