--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -4,9 +4,6 @@ on:
   push:
   #  tags:
   #   - '**'
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   build-and-push-image:
@@ -25,7 +22,7 @@ jobs:
       - name: Log in to the container registry
         uses: docker/login-action@v3
         with:
-          registry: ${{ env.REGISTRY }}
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
@@ -33,7 +30,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ghcr.io/onegov/onegov-cloud
 
       - name: Build and push docker image
         id: push
@@ -46,11 +43,11 @@ jobs:
 
       - name: Run tests on built image
         run: |
-          docker run ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.meta.outputs.version }} test-container
+          docker run ghcr.io/onegov/onegov-cloud:${{ steps.meta.outputs.version }} test-container
 
       # - name: Generate artifact attestation
       #   uses: actions/attest-build-provenance@v1
       #   with:
-      #     subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
+      #     subject-name: ghcr.io/onegov/onegov-cloud
       #     subject-digest: ${{ steps.push.outputs.digest }}
       #     push-to-registry: true
