--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -33,7 +33,7 @@ jobs:
           images: ghcr.io/onegov/onegov-cloud
 
       - name: Build build-env
-        id: push
+        id: build
         uses: docker/build-push-action@v5
         with:
           context: .
