--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -37,17 +37,17 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          push: false
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
+      - name: Generate artifact attestation
+        uses: actions/attest-build-provenance@v1
+        with:
+          subject-name: ghcr.io/onegov/onegov-cloud
+          subject-digest: ${{ steps.push.outputs.digest }}
+          push-to-registry: true
 
       - name: Run tests on built image
         run: |
           docker run ghcr.io/onegov/onegov-cloud:${{ steps.meta.outputs.version }} test-container
-
-      # - name: Generate artifact attestation
-      #   uses: actions/attest-build-provenance@v1
-      #   with:
-      #     subject-name: ghcr.io/onegov/onegov-cloud
-      #     subject-digest: ${{ steps.push.outputs.digest }}
-      #     push-to-registry: true
