--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -50,6 +50,7 @@ jobs:
 
   test-image:
     runs-on: ubuntu-24.04
+    needs: build-and-push-image
 
     steps:
       - name: Checkout repository
