--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -51,6 +51,9 @@ jobs:
   test-image:
     runs-on: ubuntu-24.04
     needs: build-and-push-image
+    strategy:
+      matrix:
+        group: [1, 2, 3, 4, 5, 6]
 
     steps:
       - name: Checkout repository
@@ -71,4 +74,5 @@ jobs:
 
       - name: Run tests on built image
         run: |
+          docker pull ghcr.io/onegov/onegov-cloud:${{ steps.meta.outputs.version }}
           docker run ghcr.io/onegov/onegov-cloud:${{ steps.meta.outputs.version }} test-container "${{matrix.group}}" 6
