--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -1,9 +1,10 @@
 name: Create and publish a Docker image
 
 on:
+  workflow_dispatch:  # allow to run manually
   push:
-  #  tags:
-  #   - '**'
+   tags:
+    - '**'
 
 jobs:
   build-and-push-image:
