Build image on all branches

--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -3,8 +3,10 @@ name: Create and publish a Docker image
 on:
   workflow_dispatch:  # allow to run manually
   push:
-   tags:
-    - '**'
+    branches:
+      - '**'
+    tags:
+      - '**'
 
 jobs:
   build-and-push-image:
@@ -52,6 +54,7 @@ jobs:
   test-image:
     runs-on: ubuntu-24.04
     needs: build-and-push-image
+    if: startsWith(github.ref, 'refs/tags/')
     strategy:
       matrix:
         group: [1, 2, 3, 4, 5, 6]
