--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build-and-push-image:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
 
     permissions:
       contents: read
@@ -52,7 +52,7 @@ jobs:
           push-to-registry: true
 
   test-image:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     needs: build-and-push-image
     if: startsWith(github.ref, 'refs/tags/')
     strategy:
@@ -82,6 +82,7 @@ jobs:
           docker run ghcr.io/onegov/onegov-cloud:${{ steps.meta.outputs.version }} test-container "${{matrix.group}}" 6
 
   cleanup-images:
+    runs-on: ubuntu-latest
 
     steps:
       - name: Delete old images
