--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -35,6 +35,9 @@ jobs:
         with:
           images: ghcr.io/onegov/onegov-cloud
 
+      - name: Display metadata outputs
+        run: echo "Tags: ${{ steps.meta.outputs.tags }}"
+
       - name: Build and push docker image
         id: push
         uses: docker/build-push-action@v5
