--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -35,10 +35,6 @@ jobs:
         with:
           images: ghcr.io/onegov/onegov-cloud
 
-      - name: Display metadata outputs
-        run: |
-          echo "Tags: ${{ steps.meta.outputs.tags }}"
-
       - name: Build and push docker image
         id: push
         uses: docker/build-push-action@v5
@@ -87,6 +83,7 @@ jobs:
 
   cleanup-images:
     runs-on: ubuntu-latest
+    needs: build-and-push-image
 
     steps:
 
@@ -98,10 +95,18 @@ jobs:
           min-versions-to-keep: 0
           delete-only-untagged-versions: 'true'
 
+      - name: Delete sha images
+        uses: actions/delete-package-versions@v5
+        with:
+          package-name: 'onegov-cloud'
+          package-type: 'container'
+          min-versions-to-keep: 0
+          ignore-versions: '^(?!sha256-).*$'
+
       - name: Delete old images
         uses: actions/delete-package-versions@v5
         with:
           package-name: 'onegov-cloud'
           package-type: 'container'
-          min-versions-to-keep: 10
+          min-versions-to-keep: 20
           ignore-versions: '^release-.*$'
