--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -95,13 +95,13 @@ jobs:
           min-versions-to-keep: 0
           delete-only-untagged-versions: 'true'
 
-      - name: Delete sha images
+      - name: Delete images tagged with commit hash
         uses: actions/delete-package-versions@v5
         with:
           package-name: 'onegov-cloud'
           package-type: 'container'
           min-versions-to-keep: 0
-          ignore-versions: '^(?!sha256-).*$'
+          ignore-versions: '^(?!sha).*$'
 
       - name: Delete old images
         uses: actions/delete-package-versions@v5
